Added more slides

--- a/notebooks/03-matplotlib.ipynb
+++ b/notebooks/03-matplotlib.ipynb
@@ -75,9 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
-    "\n",
-    "plt.show()"
+    "fig = plt.figure()"
    ]
   },
   {
@@ -109,9 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "ax = plt.axes()\n",
-    "\n",
-    "plt.show()"
+    "ax = plt.axes()"
    ]
   },
   {
@@ -143,9 +139,7 @@
    "source": [
     "ax = plt.axes()\n",
     "\n",
-    "line1 = ax.plot([0, 1, 2, 1.5], [3, 1, 2, 4])\n",
-    "\n",
-    "plt.show()"
+    "line1 = ax.plot([0, 1, 2, 1.5], [3, 1, 2, 4])"
    ]
   },
   {
@@ -190,8 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.contourf(x, y, data)\n",
-    "plt.show()"
+    "plt.contourf(x, y, data);"
    ]
   },
   {
@@ -205,8 +198,8 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(data, extent=[-180, 180, -90, 90], interpolation='nearest', origin='lower')\n",
-    "plt.show()"
+    "plt.imshow(data, extent=[-180, 180, -90, 90],\n",
+    "           interpolation='nearest', origin='lower');"
    ]
   },
   {
@@ -220,8 +213,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.pcolormesh(x, y, data)\n",
-    "plt.show()"
+    "plt.pcolormesh(x, y, data);"
    ]
   },
   {
@@ -235,8 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.scatter(x2d, y2d, c=data, s=15)\n",
-    "plt.show()"
+    "plt.scatter(x2d, y2d, c=data, s=15);"
    ]
   },
   {
@@ -250,8 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.bar(x, data.sum(axis=0), width=np.diff(x)[0])\n",
-    "plt.show()"
+    "plt.bar(x, data.sum(axis=0), width=np.diff(x)[0]);"
    ]
   },
   {
@@ -269,9 +259,7 @@
     "         linestyle='--',\n",
     "         marker='d',\n",
     "         markersize=10,\n",
-    "         color='red')\n",
-    "\n",
-    "plt.show()"
+    "         color='red');"
    ]
   },
   {
@@ -304,7 +292,8 @@
     "ax.set_title(u'Título do \"Axes', fontsize=16)\n",
     "ax.set_xlabel('O Eixo X')\n",
     "ax.set_ylabel('O Eixo Y $y=f(x)$', fontsize=16)\n",
-    "ax.text(0.5, 0.5, 'Texto centrado em (0.5, 0.5)\\nin data coordinates.', horizontalalignment='center', fontsize=14)"
+    "ax.text(0.5, 0.5, 'Texto centrado em (0.5, 0.5)\\nin data coordinates.',\n",
+    "        horizontalalignment='center', fontsize=14);"
    ]
   },
   {
@@ -327,8 +316,7 @@
     "         label='Gradiente de $f(x)$', )\n",
     "\n",
     "plt.legend(loc='lower right')\n",
-    "\n",
-    "plt.grid()"
+    "plt.grid(True)"
    ]
   },
   {
@@ -348,8 +336,7 @@
     "data = np.cos(3 * np.deg2rad(x2d)) + np.sin(2 * np.deg2rad(y2d))\n",
     "\n",
     "plt.contourf(x, y, data)\n",
-    "\n",
-    "plt.colorbar(orientation='horizontal')"
+    "plt.colorbar(orientation='horizontal');"
    ]
   },
   {
@@ -369,7 +356,7 @@
     "             xy=(4, -18),\n",
     "             xytext=(-2, -40), fontsize=15,\n",
     "             arrowprops={'facecolor': 'black', 'frac': 0.3})\n",
-    "plt.grid()"
+    "plt.grid(True)"
    ]
   },
   {
@@ -429,7 +416,8 @@
     "import numpy as np\n",
     "import numpy.ma as ma\n",
     "\n",
-    "data = np.loadtxt(\"./data/dados_pirata.csv\", skiprows=1, usecols=range(2, 16), delimiter=',')\n",
+    "data = np.loadtxt(\"./data/dados_pirata.csv\", skiprows=1,\n",
+    "                  usecols=range(2, 16), delimiter=',')\n",
     "\n",
     "data = ma.masked_less_equal(data, -9999)"
    ]
@@ -446,7 +434,7 @@
    "outputs": [],
    "source": [
     "plt.pcolormesh(np.flipud(data.T))\n",
-    "plt.colorbar()"
+    "plt.colorbar();"
    ]
   },
   {
@@ -460,11 +448,11 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(9, 3))\n",
+    "fig, ax = plt.subplots(figsize=(12.5, 5))\n",
     "\n",
     "cs = ax.pcolormesh(np.flipud(data.T))\n",
     "\n",
-    "fig.colorbar(cs)"
+    "fig.colorbar(cs);"
    ]
   },
   {
@@ -502,7 +490,7 @@
     "\n",
     "ax.set_xlabel(\"Tempo\")\n",
     "ax.set_ylabel(\"Temperatura\")\n",
-    "ax.set_title(u\"Série-temporal PIRATA\")"
+    "ax.set_title(u\"Série-temporal PIRATA\");"
    ]
   },
   {
@@ -523,6 +511,20 @@
     "    ax.set_xlabel(\"Tempo\")\n",
     "    ax.set_ylabel(\"Temperatura\")\n",
     "    ax.set_title(u\"Série-temporal PIRATA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plot_ts(data)"
    ]
   },
   {
@@ -584,7 +586,7 @@
    "source": [
     "style.use('ggplot')\n",
     "\n",
-    "plt.hist(data[0, :])"
+    "n, bins, pathes = plt.hist(data[0, :])"
    ]
   },
   {
@@ -601,24 +603,9 @@
     "style.use('ggplot')\n",
     "\n",
     "idx = 0\n",
-    "\n",
     "mask = data.mask[:, 0]\n",
     "\n",
-    "n = plt.hist(data[:, 0].data[~mask], bins=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "data[idx, :]"
+    "n, bins, pathes = plt.hist(data[:, 0].data[~mask], bins=10)"
    ]
   },
   {
@@ -831,7 +818,136 @@
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
-    "IFrame(\"http://matplotlib.org/gallery.html\", width=900, height=500)"
+    "url = \"http://matplotlib.org/gallery.html\"\n",
+    "\n",
+    "IFrame(url, width=900, height=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Exercícios usando os dados da boia Piratas\n",
+    "\n",
+    "- 1) Plotar dois perfis verticais lado a lado e compartilhando o eixo `y`.  Dica: use o método `plt.subplots()`\n",
+    "\n",
+    "- 2) Plotar as séries temporais, superfície e fundo, alinhadas verticalmente  e compartilhando o eixo `x`\n",
+    "\n",
+    "- 3) Perfil vertical médio para todo o período"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!head -1 ./data/dados_pirata.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, sharey=True)\n",
+    "\n",
+    "Z = [1, 10, 100, 120, 13, 140, 180, 20, 300, 40, 5, 500, 60, 80]\n",
+    "\n",
+    "ax0.plot(data[42, :], Z, 'o')\n",
+    "ax1.plot(data[342, :], Z, 'o')\n",
+    "\n",
+    "ax0.invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!head -1 ./data/dados_pirata.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, (ax0, ax1) = plt.subplots(nrows=2, sharex=True)\n",
+    "\n",
+    "ax0.plot(data[:, 0])\n",
+    "ax1.plot(data[:, -3]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "Z = [1, 10, 100, 120, 13, 140, 180, 20, 300, 40, 5, 500, 60, 80]\n",
+    "\n",
+    "ax.plot(data.mean(axis=0), Z, 'o')\n",
+    "\n",
+    "ax.invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Perguntas\n",
+    "\n",
+    "- 1) Como fazer para realizar operações (médias, max, min, etc) apenas nos ano (ou meses) desses dados?\n",
+    "- 2) Como ordenar o eixo `z` para podermos ligar as linhas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "url = \"https://ocefpaf.github.io/python4oceanographers/blog/2013/12/09/zoom/\"\n",
+    "\n",
+    "IFrame(url, width=900, height=500)"
    ]
   }
  ],
