--- a/notebooks/04-pandas.ipynb
+++ b/notebooks/04-pandas.ipynb
@@ -192,45 +192,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from matplotlib import style\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "style.use('ggplot')\n",
-    "\n",
-    "def make_plot():\n",
-    "    fig, axes = plt.subplots(figsize=(11, 1.25*11), nrows=11, sharex=True, sharey=False)\n",
-    "\n",
-    "    kw = dict(color='darkorange', linewidth=2)\n",
-    "    for ax, col in zip(axes, df.columns):\n",
-    "        ax.plot(df['2015'].index, df['2015'][col], **kw)\n",
-    "        ax.set_ylabel('{} m'.format(col))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "make_plot()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -500,7 +461,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -531,7 +492,66 @@
    },
    "outputs": [],
    "source": [
-    "ax = df[['low', 'high']].plot()"
+    "ax = df[['low', 'high']].plot(figsize=(9, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas e seus irmãos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "fname = \"./data/2013-04-29-Running.geojson\"\n",
+    "\n",
+    "df = gpd.read_file(fname)\n",
+    "\n",
+    "df.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from ctd import DataFrame\n",
+    "\n",
+    "cast = DataFrame.from_cnv('./data/CTD_001.cnv.gz', compression='gzip')\n",
+    "\n",
+    "cast.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = cast['t090C'].plot()"
    ]
   }
  ],
